# grep-hw

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  src.pro
src/app/: CMakeLists.txt  Grep.pri  GrepGlobal.h  PathWalker.cpp  PathWalker.h  ThreadSafeQueue.h  WordCountManager.cpp  WordCountManager.h  WordCounter.cpp  WordCounter.h  app.pro  main.cpp
src/tests/: Mocks.h  _test_WordCounter.cpp  main.cpp  tests.pro
